RAS-1636 Add registry-instrument count API
