# application/controllers/sql_queries.py
@@ -1,3 +1,8 @@
+from typing import Optional
+
+from sqlalchemy.orm import Session
+from sqlalchemy.sql import text
+
 from application.models.models import (
     BusinessModel,
     ExerciseModel,
@@ -58,3 +63,11 @@ def query_registry_instrument_by_exercise_id_and_formtype(exercise_id, form_type
         RegistryInstrumentModel.classifier_type == "form_type",
         RegistryInstrumentModel.classifier_value == form_type,
     )
+
+
+def query_registry_instrument_count_by_exercise_id(exercise_id: str, session: Session) -> Optional[int]:
+    row_result = session.execute(
+        text("SELECT * FROM ras_ci.registry_instrument_count WHERE exercise_id = :exercise_id"),
+        {"exercise_id": exercise_id},
+    ).first()
+    return row_result[1] if row_result else 0
